[package]
name = "ritk-io"
version = "0.2.0"
edition = "2021"
license.workspace = true

[dependencies]
coeus-core = { workspace = true }
coeus-tensor = { workspace = true }
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-annotation = { path = "../ritk-annotation" }
ritk-filter = { path = "../ritk-filter" }
ritk-dicom = { workspace = true }
ritk-codecs = { workspace = true }
ritk-nifti = { workspace = true }
ritk-nrrd = { workspace = true }
ritk-metaimage = { workspace = true }
ritk-mgh = { workspace = true }
ritk-analyze = { workspace = true }
ritk-vtk = { workspace = true }
ritk-jpeg = { workspace = true }
ritk-png = { workspace = true }
ritk-tiff = { workspace = true }
ritk-minc = { workspace = true }
dicom = { workspace = true }
# rustls replaces native-tls: no system OpenSSL needed
reqwest = { workspace = true, features = ["blocking", "stream", "json", "rustls-tls"] }
dicom-core = { workspace = true }
dicom-ul = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
moirai = { workspace = true }
image = { workspace = true }
tiff = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
gaia = { workspace = true }
consus-hdf5 = { workspace = true }
consus-core = { workspace = true }
consus-io = { workspace = true }
serde_json = { workspace = true }
arrayvec = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dicom-pixeldata = { workspace = true, features = ["native"] }
dicom-transfer-syntax-registry = { workspace = true, features = ["native", "jpegxl"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dicom-pixeldata = { workspace = true }
dicom-transfer-syntax-registry = { workspace = true }

[dev-dependencies]
ritk-codecs = { workspace = true }
tempfile = { workspace = true }
zune-jpegxl = { workspace = true, default-features = false, features = ["std"] }
zune-core = { workspace = true, default-features = false }

[[example]]
name = "dicom_to_nifti"
path = "examples/dicom_to_nifti.rs"
