[package]
name = "ritk-jpeg"
version = "0.1.0"
edition = "2021"
description = "JPEG grayscale image I/O for RITK"
repository = "https://github.com/ryancinsight/ritk"

[features]
default = []
# Atlas migration: expose a Coeus-backed reader path alongside the Burn one.
coeus = ["dep:coeus-core", "ritk-image/coeus"]

[dependencies]
ritk-core = { workspace = true }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
burn = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
coeus-core = { workspace = true, optional = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
tempfile = { workspace = true }
