[package]
name = "ritk-jpeg"
version = "0.1.0"
edition = "2021"
description = "JPEG grayscale image I/O for RITK"
repository = "https://github.com/ryancinsight/ritk"

[dependencies]
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
anyhow = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
coeus-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
