[package]
name = "ritk-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for ritk-core (resolves the macro_rules! hygiene barrier in interp_dim_template)"
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
