[package]
name = "ritk-metaimage"
version = "0.1.1"
edition = "2021"
description = "MetaImage (MHA/MHD) I/O for RITK"
repository = "https://github.com/ryancinsight/ritk"

[dependencies]
ritk-core = { workspace = true }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-codecs = { path = "../ritk-codecs" }
burn = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
flate2 = { workspace = true }
coeus-core = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
tempfile = { workspace = true }
