[package]
name = "ritk-metaimage"
version = "0.1.1"
edition = "2021"
license.workspace = true
description = "MetaImage (MHA/MHD) I/O for RITK"
repository = "https://github.com/ryancinsight/ritk"

[dependencies]
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-codecs = { path = "../ritk-codecs" }
anyhow = { workspace = true }
bytemuck = { workspace = true }
flate2 = { workspace = true }
coeus-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
