[package]
name = "ritk-mgh"
version = "0.2.0"
edition = "2021"
authors = ["Ryan Clanton"]
license = "MIT OR Apache-2.0"

[dependencies]
burn-ndarray = { workspace = true }
ritk-core = { workspace = true }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
anyhow = { workspace = true }
flate2 = { workspace = true }
tracing = { workspace = true }
coeus-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
