[package]
name = "ritk-minc"
version = "0.1.0"
edition = "2021"
description = "MINC2 (.mnc / .mnc2) image I/O for RITK"
repository = "https://github.com/ryancinsight/ritk"

[dependencies]
burn-ndarray = { workspace = true }
ritk-core = { workspace = true }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
anyhow = { workspace = true }
consus-hdf5 = { workspace = true }
consus-core = { workspace = true }
consus-io = { workspace = true }
coeus-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
