[package]
name = "ritk-model"
version = "0.1.0"
edition = "2021"

[dependencies]
burn-ndarray = { workspace = true }
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-interpolation = { path = "../ritk-interpolation" }
ritk-transform = { path = "../ritk-transform" }
burn = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
coeus-tensor = { workspace = true }
onnx-ir = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
mockito = "1"
