[package]
name = "ritk-model"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
thiserror = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
coeus-tensor = { workspace = true }
coeus-core = { workspace = true }
coeus-ops = { workspace = true }
coeus-autograd = { workspace = true }
coeus-nn = { workspace = true }
coeus-leto = { workspace = true }
onnx-ir = { workspace = true }
coeus-optim = { workspace = true }
consus-io = { workspace = true }
consus-onnx = { workspace = true }
# rustls replaces native-tls: no system OpenSSL needed
reqwest = { workspace = true, features = ["blocking", "stream", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
