[package]
name = "ritk-nifti"
version = "0.1.0"
edition = "2021"

[dependencies]
burn-ndarray = { workspace = true }
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
anyhow = { workspace = true }
tracing = { workspace = true }
flate2 = { workspace = true }
coeus-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
