[package]
name = "ritk-nrrd"
version = "0.1.0"
edition = "2021"
description = "NRRD (Nearly Raw Raster Data) I/O for RITK"
repository = "https://github.com/ryancinsight/ritk"

[dependencies]
ritk-core = { workspace = true }
burn = { workspace = true }
anyhow = { workspace = true }
nalgebra = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
tempfile = "3.0"
