[package]
name = "ritk-nrrd"
version = "0.1.1"
edition = "2021"
description = "NRRD (Nearly Raw Raster Data) I/O for RITK"
repository = "https://github.com/ryancinsight/ritk"

[dependencies]
burn-ndarray = { workspace = true }
ritk-core = { workspace = true }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-codecs = { path = "../ritk-codecs" }
coeus-core = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
