[package]
name = "ritk-png"
version = "0.1.0"
edition = "2021"
description = "PNG single-slice and sequential-volume I/O for RITK"
repository = "https://github.com/ryancinsight/ritk"

[dependencies]
ritk-core = { workspace = true }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
burn = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
coeus-core = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
tempfile = { workspace = true }
