[package]
name = "ritk-python"
version = "0.12.0"
edition = "2021"

[lib]
name = "_ritk"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { workspace = true }
numpy = { workspace = true }
ritk-core = { path = "../ritk-core" }
ritk-io = { path = "../ritk-io" }
ritk-registration = { path = "../ritk-registration" }
burn-ndarray = { workspace = true }
burn = { workspace = true, features = ["ndarray"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
nalgebra = { workspace = true }
