[package]
name = "ritk-python"
version = "0.12.79"
edition = "2021"
license.workspace = true

[lib]
name = "_ritk"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
burn-ndarray = { workspace = true }
pyo3 = { workspace = true }
numpy = { workspace = true }
coeus-core = { workspace = true }
coeus-tensor = { workspace = true }
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-statistics = { path = "../ritk-statistics" }
ritk-interpolation = { path = "../ritk-interpolation" }
ritk-transform = { path = "../ritk-transform" }
ritk-filter = { path = "../ritk-filter" }
ritk-segmentation = { path = "../ritk-segmentation" }
ritk-io = { path = "../ritk-io" }
ritk-registration = { path = "../ritk-registration" }
burn = { workspace = true, features = ["ndarray", "autodiff"] }
anyhow = { workspace = true }
