[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "ritk"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.maturin]
python-source = "python"
module-name = "ritk._ritk"
features = ["extension-module"]
profile = "release"

[tool.pytest.ini_options]
timeout = 60
timeout_method = "thread"
markers = [
    "slow: registration and deformable transform tests that take >30s",
]
