[package]
name = "ritk-registration-classical"
version = "0.1.0"
edition = "2021"
description = "Classical (non-ML) image registration algorithms for ritk: Kabsch SVD, rigid-body MI, affine MI, temporal synchronization"
license = "MIT OR Apache-2.0"

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
nalgebra = { version = "0.32" }
thiserror = "1.0"
log = "0.4"
