[package]
name = "ritk-registration"
version = "0.53.0"
edition = "2021"

[features]
default = ["direct-parzen", "serde"]
# Use direct (sparse-loop) histogram computation for NdArray backends.
# ~6× faster than the tensor-based path on CPU. Disable for GPU/autodiff
# backends where the tensor matmul path is preferred, or when the Parzen
# weight matrices must remain in the autodiff graph.
direct-parzen = []
serde = ["dep:serde"]

[dependencies]
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image" }
ritk-wgpu-compat = { path = "../ritk-wgpu-compat" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-statistics = { path = "../ritk-statistics" }
ritk-interpolation = { path = "../ritk-interpolation" }
ritk-transform = { path = "../ritk-transform" }
ritk-filter = { path = "../ritk-filter" }
ritk-segmentation = { path = "../ritk-segmentation" }
ritk-model = { path = "../ritk-model" }
burn = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ndarray = { workspace = true }
nalgebra = { workspace = true }
moirai = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
ritk-io = { path = "../ritk-io" }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
image = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "mi_histogram"
harness = false

[[bench]]
name = "registration_pipeline"
harness = false

[[bench]]
name = "parzen_direct"
harness = false

[[bench]]
name = "bspline_displacement"
harness = false

[[bench]]
name = "lddmm_smoothing"
harness = false

[[example]]
name = "rigid_registration"
path = "examples/rigid_registration.rs"

[[example]]
name = "dl_registration"
path = "examples/dl_registration.rs"

[[example]]
name = "brain_ct_mri_registration"
path = "examples/brain_ct_mri_registration.rs"

[[example]]
name = "rire_mri_ct_registration"
path = "examples/rire_mri_ct_registration/main.rs"
