[package]
name = "ritk-registration"
version = "0.53.0"
edition = "2021"
license.workspace = true

[features]
default = ["direct-parzen", "serde"]
# Use direct (sparse-loop) histogram computation for NdArray backends.
direct-parzen = []
serde = ["dep:serde"]
# Enable burn-backed filter pipeline (ritk-filter, ritk-segmentation, ritk-model).
# Disabled by default to allow clean compilation without the legacy burn Image surface.
burn-filters = ["dep:ritk-filter", "dep:ritk-segmentation", "dep:ritk-model"]

[dependencies]
burn-ndarray = { workspace = true }
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image" }
ritk-wgpu-compat = { path = "../ritk-wgpu-compat" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-statistics = { path = "../ritk-statistics" }
ritk-interpolation = { path = "../ritk-interpolation" }
ritk-transform = { path = "../ritk-transform" }
ritk-filter = { path = "../ritk-filter", optional = true }
ritk-segmentation = { path = "../ritk-segmentation", optional = true }
ritk-model = { path = "../ritk-model", optional = true }
ritk-tensor-ops = { path = "../ritk-tensor-ops" }
burn = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
leto = { workspace = true }
leto-ops = { workspace = true }
eunomia = { workspace = true }
moirai = { workspace = true }
coeus-core = { workspace = true }
coeus-tensor = { workspace = true }
coeus-ops = { workspace = true }
coeus-autograd = { workspace = true }
coeus-nn = { workspace = true }
coeus-optim = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
ritk-io = { path = "../ritk-io" }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
image = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
proptest = { workspace = true }
ritk-image = { path = "../ritk-image", features = ["test-helpers"] }

[[bench]]
name = "mi_histogram"
harness = false

[[bench]]
name = "registration_pipeline"
harness = false

[[bench]]
name = "parzen_direct"
harness = false

[[bench]]
name = "bspline_displacement"
harness = false

[[bench]]
name = "lddmm_smoothing"
harness = false

[[example]]
name = "rigid_registration"
path = "examples/rigid_registration.rs"

[[example]]
name = "dl_registration"
path = "examples/dl_registration.rs"

[[example]]
name = "brain_ct_mri_registration"
path = "examples/brain_ct_mri_registration.rs"

[[example]]
name = "rire_mri_ct_registration"
path = "examples/rire_mri_ct_registration/main.rs"

[[example]]
name = "dl_train"
path = "examples/dl_train.rs"
