[package]
name = "ritk-registration"
version = "0.53.0"
edition = "2021"
license.workspace = true

[features]
default = ["direct-parzen", "serde"]
# Use direct sparse-loop histogram computation.
direct-parzen = []
serde = ["dep:serde"]

[dependencies]
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image" }
ritk-wgpu-compat = { path = "../ritk-wgpu-compat" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-statistics = { path = "../ritk-statistics" }
ritk-interpolation = { path = "../ritk-interpolation" }
ritk-transform = { path = "../ritk-transform" }
ritk-filter = { path = "../ritk-filter" }
ritk-segmentation = { path = "../ritk-segmentation" }
ritk-model = { path = "../ritk-model" }
ritk-tensor-ops = { path = "../ritk-tensor-ops" }
bytemuck = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
leto = { workspace = true }
leto-ops = { workspace = true }
eunomia = { workspace = true }
moirai = { workspace = true }
coeus-core = { workspace = true }
coeus-tensor = { workspace = true }
coeus-ops = { workspace = true }
coeus-autograd = { workspace = true }
coeus-nn = { workspace = true }
coeus-optim = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
ritk-io = { path = "../ritk-io" }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
image = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
ritk-image = { path = "../ritk-image", features = ["test-helpers"] }

[[bench]]
name = "bspline_displacement"
harness = false

[[bench]]
name = "lddmm_smoothing"
harness = false

[[example]]
name = "dl_registration"
path = "examples/dl_registration.rs"

[[example]]
name = "dl_train"
path = "examples/dl_train.rs"
