[package]
name = "ritk-segmentation"
version = "0.1.5"
edition = "2021"

[dependencies]
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image", features = ["test-helpers"] }
ritk-filter = { path = "../ritk-filter" }
ritk-tensor-ops = { path = "../ritk-tensor-ops" }
burn = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
moirai = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
