[package]
name = "ritk-segmentation"
version = "0.2.0"
edition = "2021"

[dependencies]
burn-ndarray = { workspace = true }
ritk-core = { path = "../ritk-core" }
ritk-image = { path = "../ritk-image", features = ["test-helpers"] }
ritk-filter = { path = "../ritk-filter" }
ritk-tensor-ops = { path = "../ritk-tensor-ops" }
anyhow = { workspace = true }
tracing = { workspace = true }
coeus-core = { workspace = true }
coeus-tensor = { workspace = true }
moirai = { workspace = true }

[dev-dependencies]
