[package]
name = "ritk-snap"
version = "0.1.0"
edition = "2021"
description = "RITK DICOM image viewer — full-featured medical workstation viewer"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ritk-snap"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
burn = { workspace = true }
burn-ndarray = { workspace = true }
ritk-core = { workspace = true }
ritk-io = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eframe = { version = "0.28", default-features = true }
egui = "0.28"
rfd = "0.14"
image = { workspace = true }
nalgebra = { workspace = true }
gaia = { workspace = true }
walkdir = { workspace = true }
bytemuck = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { workspace = true }
pollster = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }

[dev-dependencies]
tempfile = { workspace = true }
