[package]
name = "ritk-snap"
version = "0.1.0"
edition = "2021"
description = "RITK DICOM image viewer — full-featured medical workstation viewer"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ritk-snap"
path = "src/main.rs"

[dependencies]
coeus-core = { workspace = true }
anyhow = { workspace = true }
arrayvec = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ritk-core = { workspace = true }
ritk-annotation = { path = "../ritk-annotation" }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
ritk-filter = { workspace = true }
ritk-segmentation = { workspace = true }
ritk-io = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
rfd = { workspace = true }
image = { workspace = true }
gaia = { workspace = true }
walkdir = { workspace = true }
bytemuck = { workspace = true }
moirai = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { workspace = true }
pollster = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
getrandom_02 = { workspace = true, features = ["js"] }

[dev-dependencies]
tempfile = { workspace = true }
