[package]
name = "ritk-tensor-ops"
version = "0.1.0"
edition = "2021"
description = "Shared tensor extract/rebuild helpers for Burn image and Coeus tensor host-buffer paths"

[features]
default = []
coeus = ["dep:coeus-core", "dep:coeus-tensor", "dep:coeus-leto", "dep:coeus-ops", "ritk-image/coeus"]

[dependencies]
burn = { workspace = true }
ritk-image = { path = "../ritk-image", features = ["test-helpers"] }
ritk-spatial = { path = "../ritk-spatial" }
anyhow = { workspace = true }
eunomia = { workspace = true }
coeus-core = { workspace = true, optional = true }
coeus-tensor = { workspace = true, optional = true }
coeus-ops = { workspace = true, optional = true }
coeus-leto = { workspace = true, optional = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
