[package]
name = "ritk-tensor-ops"
version = "0.1.0"
edition = "2021"
description = "Shared tensor extract/rebuild helpers for Burn image and Coeus tensor host-buffer paths"

[dependencies]
burn-ndarray = { workspace = true }
ritk-image = { path = "../ritk-image", features = ["test-helpers"] }
ritk-spatial = { path = "../ritk-spatial" }
anyhow = { workspace = true }
eunomia = { workspace = true }
coeus-core = { workspace = true }
coeus-tensor = { workspace = true }
coeus-ops = { workspace = true }
coeus-leto = { workspace = true }

[dev-dependencies]
burn = { workspace = true }
