[package]
name = "ritk-tiff"
version = "0.1.0"
edition = "2021"
description = "TIFF / BigTIFF image I/O for RITK"
repository = "https://github.com/ryancinsight/ritk"

[dependencies]
burn-ndarray = { workspace = true }
ritk-core = { workspace = true }
ritk-image = { path = "../ritk-image" }
ritk-spatial = { path = "../ritk-spatial" }
anyhow = { workspace = true }
tiff = { workspace = true }
coeus-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
ritk-image = { path = "../ritk-image", features = ["test-helpers"] }
